[platform] eliminating `LocalDesktopEntryCreator` in favor of `CreateDesktopEntryAction`
GitOrigin-RevId: 49e1e0edeee39d6fc8bdc1986a1b7ba281f392f3